strategy/canary/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: apache
  namespace: canary
spec:
  replicas: 2
  selector:
    matchLabels:
      app: depl-stra
  template:
    metadata:
      labels:
        app: depl-stra
    spec:
      containers:
        - name: apache
          image: httpd:latest
          ports:
            - containerPort: 80
