strategy/canary/service.yml
kind: Service
apiVersion: v1
metadata:
  name: com-svc
  namespace: canary
spec:
  selector:
    app: depl-stra
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
