strategy/canary/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: web-ingress
  namespace: canary
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: com-svc
                port:
                  number: 80
